# dx-vault-atlas

./: .env.example  .gitignore  .gitmodules  LICENSE  README.md  Test Auto Fix.md  debug_date.py  integration_test.py  pyproject.toml  repro_bug.py  repro_bug2.py  verify_defaults.py
.agent/: AGENTS.md
.agent/core/: error_lifecycle.md  identity.md  logging_communication.md  logic_flow.md  solid_architecture.md
.agent/skills/: identity.md
dx_vault/00_Inbox/: 20260205035631_TitleNormalizer_Refactor  20260307044050_infraestructura_de_puente_residencial_para_encuestas_usa_vz.md  20260307064911_estrategia_de_infraestructura_y_ciclo_de_vida_de_identidad_para_encuestas_usa_vz.md
dx_vault/02_MOCs/: 000_Home.md
project_tree/: 000_tree.md  app.py.md  bootstrap.py.md  cli.py.md  config.py.md  config_editor.py.md  config_wizard.py.md  console.py.md  date_resolver.py.md  defaults.py.md  enums.py.md  factory.py.md  fixer.py.md  info.md.md  logger.py.md  moc.md.md  note.py.md  note_doctor_app.py.md  note_doctor_main.py.md  note_doctor_tui.py.md  note_doctor_validator.py.md  note_migrator_app.py.md  note_migrator_main.py.md  patcher.py.md  paths.py.md  processor.py.md  project.md.md  pydantic_utils.py.md  ref.md.md  result_app.py.md  scanner.py.md  shared_console.py.md  shared_tui_app.py.md  system_editor.py.md  task.md.md  templating.py.md  theme.py.md  title_normalizer.py.md  transformation_service.py.md  tui.py.md  (+7 more)
scripts/: create_test_notes_manually.py  fix_test_notes.py  reproduce_cli_flow.py  reproduce_ref_info.py  reproduce_version_issue.py  verify_debug.py  verify_doctor_autofill.py  verify_doctor_debug.py
src/: test_strip.py
src/dx_vault_atlas/: cli.py
test_vault/: 000_Home.md  20260218024306_mejores_practicas_para_agentes_en_google_antigravity.md
test_vault/00_Inbox/: 20260218024306_mejores_practicas_para_agentes_en_google_antigravity.md
tests/: check_full_doctor.py  check_old.py  check_old2.py  check_patcher_source.py  check_refnote.py  check_trace.py  repro_source_bug.py  reproduce_doctor.py  reproduce_migration.py  test_doctor_extraneous.py  test_note_creator_main.py  test_note_creator_tui.py  test_processor.py  test_title_normalizer.py  test_tui_wizard.py  test_validator.py  verify_source_fix.py
tests/doctor_scenarios/: 02_missing_dates_filename_20250101120000.md  03_missing_dates_no_filename.md  04_future_creation_date.md  12_null_tags.md  16_updated_before_created_20250102120000.md
tests/migration_scenarios/: 02_missing_type_explicit.md  07_malformed_frontmatter.md
tests/note_creator/: check_refnote.py  test_note_creator_main.py  test_note_creator_tui.py  test_processor.py  test_title_normalizer.py  test_tui_widgets.py  test_tui_wizard.py  test_wizard_app.py
tests/note_doctor/: test_doctor_extraneous.py  test_doctor_scenarios.py  test_validator.py
tests/note_migrator/: test_migration_scenarios.py
tests/temp_doctor_repro/: 20250101120000_dated_task.md  20250102120000_chrono_task.md  bad_case_task.md  bad_status_task.md  combo_task.md  my_job.md  (+7 more)
tools/: pyproject.toml
tools/note_creator/: .gitignore  pyproject.toml  requirements.txt
tools/note_creator/src/note_creator/: main.py
tools/note_creator/src/note_creator/core/: editor.py  logger.py  processor.py
tools/note_creator/src/note_creator/models/: enums.py  note.py
tools/note_creator/src/note_creator/services/: console.py  note_creator.py  templating.py
tools/note_creator/src/note_creator/templates/: info.md  moc.md  project.md  task.md
tools/note_creator/src/note_creator/utils/: paths.py  title_normalizer.py
tools/note_creator/tests/: conftest.py  test_paths.py  test_processor.py  test_templating.py  test_title_normalizer.py
(+245 files in other folders)
