# Pyproject.toml Optimized Template (Full)

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nombre-del-proyecto"
version = "0.1.0"
description = "Descripción densa del propósito del sistema"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "Daniel Godoy", email = "godoydanielito@gmail.com"}]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Development Status :: 4 - Beta",
    "Typing :: Typed",
    "Operating System :: OS Independent"
]

dependencies = [
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.1",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.23.0",
    "pre-commit>=3.6.0",
    "pip-audit>=2.7.0",
]
types = [
    "types-python-dotenv",
    "types-setuptools",
]

[project.scripts]
app-cli = "nombre_paquete.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/nombre_paquete"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E", "F", "I", "B", "UP", "PTH", "T20", "ARG", "N", "C90", 
    "RET", "SIM", "ERA", "D", "ANN", "PT", "ASYNC"
]
ignore = [
    "D100", 
    "D104", 
    "ANN101",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 8

[tool.mypy]
python_version = "3.12"
strict = true
disallow_untyped_defs = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
mypy_path = "src"
explicit_package_bases = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = "-ra -v --strict-markers --cov=src --cov-report=term-missing --cov-fail-under=80"
markers = [
    "integration: tests que requieren servicios externos",
    "unit: tests de lógica pura",
]
log_cli = true
log_cli_level = "INFO"

[tool.uv]
managed = true

[tool.uv.workspace]
members = [
    "herramienta",
]
