[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dx-note-creator"
version = "0.1.0"
description = "CLI Tool para automatizar la creación de notas en Obsidian"
readme = "README.md"
authors = [
    {name = "Daniel Godoy", email = "godoydanielito@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5.3",
    "email-validator>=2.1.0",
    "Jinja2>=3.1.2",
    "MarkupSafe>=2.1.3",
    "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "mypy>=1.7.1",
    "ruff>=0.1.0",
]

[project.scripts]
note = "note_creator.main:main"

[tool.hatch.build.targets.wheel]
# Solo incluimos el paquete principal
packages = ["src/note_creator"]

[tool.hatch.build.targets.wheel.sources]
# Mapeamos 'src' como raíz para que en la instalación 
# el paquete sea 'note_creator' y no 'src.note_creator'
"src" = ""

[tool.hatch.build.targets.sdist]
# Aseguramos que los recursos no-python viajen en la distribución
include = [
    "src/note_creator/templates/*.md",
]

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "F", "I", "B", "UP", "PTH", "T20"]

[tool.mypy]
python_version = "3.11"
strict = true
disallow_untyped_defs = true
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -q"
